SAK-17934 - merging trunk changes into branch
git-svn-id: https://source.sakaiproject.org/svn/content/branches/SAK-17934@75514 66ffb92e-73f9-0310-93c1-f5514f145a0a